installs  rails-react gem and adds test components

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,11 @@
 <h1>
   Home view  
 </h1>
+
+<div id="react-mount">
+
+</div>
+
+<div>
+  <%= react_component("Greeting", { name: 'Bob' }, {prerender: true}) %> 
+</div>
