Adds materialize CSS, The  input fields and display area

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,22 @@
 <html>
 <head>
   <title>Workspace</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
   <%= stylesheet_link_tag    'application', media: 'all' %>
+  
   <%= javascript_include_tag 'application' %>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+          
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  
+  <div class="container">
+  
+    <%= yield %>
+ 
+  </div>
 
 </body>
 </html>
